# 221BravoApp_v3

./: .gitignore  Cargo.toml  README.md  canister_ids.json  dfx.json  package-lock.json  package.json  svelte.config.js  tailwind.config.js
Canister_Templates/: README.md
Canister_Templates/Modular_IC_Stable_Memory/: Cargo.toml
Canister_Templates/Modular_IC_Stable_Memory/src/core/: constants.rs  init_and_upgrade.rs  runtime.rs  stable_memory.rs  types.rs
Canister_Templates/Modular_IC_Stable_Structures/: example.did
src/auth_backend/: Cargo.toml  auth_backend.did  lib.rs  version.txt
src/auth_backend/core/: api.rs  constants.rs  runtime.rs  stable_memory.rs  utils.rs  working_stats.rs
src/auth_backend/services/: account_identifier.rs  api.rs  constants.rs  mod.rs  public_accounts.rs  top_tokens.rs  user_data.rs  utils.rs
src/auth_backend/timers/: api.rs  timers.rs
src/canister_factory/: Cargo.toml  README.md  canister_factory.did  lib.rs
src/canister_factory/core/: constants.rs  runtime.rs  stable_memory.rs  types.rs  utils.rs
src/canister_factory/factory/: api.rs  constants.rs  factory.rs  factory_types.rs  jobs.rs  mod.rs
src/canister_factory/scripts/: icAgent.mjs  upload_wasm.mjs
src/canister_factory/scripts/IDL/: factory_canister.mjs
src/cycles_manager/: Cargo.toml  VERSION.txt  cycles_manager.did  lib.rs
src/cycles_manager/core/: constants.rs  init_and_upgrade.rs  runtime.rs  stable_memory.rs  types.rs  utils.rs
src/cycles_manager/manager/: api.rs  check_cycles.rs  mod.rs
src/cycles_manager/timers/: api.rs  mod.rs  timers.rs  utils.rs
src/defiOracle/: README.md
src/defiOracle/defi_oracle_cpc/: Cargo.toml  defi_oracle_cpc.did  lib.rs  test_data.rs
src/defiOracle/defi_oracle_cpc/core/: constants.rs  init_and_upgrade.rs  runtime.rs  (+2 more)
src/defiOracle/defi_oracle_mib/: Cargo.toml  defi_oracle_mib.did
src/defiOracle/defi_oracle_mib/core/: init_and_upgrade.rs  mod.rs  runtime.rs  types.rs  utils.rs
src/defiOracle/defi_oracle_mib/mib/: api.rs  fetch_data.rs  mod.rs  utils.rs
src/defiOracle/defi_oracle_shared/: Cargo.toml
src/defiOracle_mk2/: README.md
src/defiOracle_mk2/oracle_cpc_mk2/: Cargo.toml  NOTES.txt  README.md  TODO.txt  lib.rs  oracle_cpc_mk2.did  test_data.rs
src/defiOracle_mk2/oracle_cpc_mk2/core/: api.rs  constants.rs  init_and_upgrade.rs  runtime.rs  stable_memory.rs  types.rs  utils.rs  working_stats.rs
src/defiOracle_mk2/oracle_cpc_mk2/cpc/: api.rs  fetch_data.rs  misc_types.rs  mod.rs  send_data.rs  utils.rs
src/defiOracle_mk2/oracle_cpc_mk2/http/: inbound.rs  outbound.rs
src/defiOracle_mk2/oracle_cpc_mk2/timers/: api.rs  timers.rs
src/defiOracle_mk2/oracle_mib_mk2/: Cargo.toml  NOTES.txt  lib.rs  oracle_mib_mk2.did
src/defiOracle_mk2/oracle_shared_mk2/: Cargo.toml
src/defiOracle_mk2/oracle_shared_mk2/src/: shared_types.rs  utils.rs
src/defiOracle_mk2/scripts/: add_to_ohlc.sh  add_tokens.sh  init_oracle.sh  new_token_MASTER.sh  t1.sh  t10.sh  t11.sh  t12.sh  t13.sh  t14.sh  t15.sh  t16.sh  t17.sh  t18.sh  t19.sh  t2.sh  t20.sh  t21.sh  t22.sh  t23.sh  t24.sh  t25.sh  t26.sh  t3.sh  t4.sh  t5.sh  t6.sh  t7.sh  t8.sh  t9.sh  update_status.sh
src/frontend/src/: app.html  service-worker.js
src/ocBot_mk2/: Cargo.toml  lib.rs  oc_bot_mk2.did
src/ocBot_mk2/bot/: api.rs  constants.rs  mod.rs  send_message.rs  setup.rs
src/ocBot_mk2/core/: stable_memory.rs
src/ohlcStore/: Cargo.toml  lib.rs  ohlc_store.did
src/ohlcStore/core/: constants.rs  init_and_upgrade.rs  runtime.rs  stable_memory.rs  utils.rs
src/ohlcStore/store/: api.rs  btree.rs  constants.rs  mod.rs  price_data.rs
src/ohlcStore/timers/: api.rs  constants.rs  mod.rs  processing.rs  timers.rs  utils.rs
src/ohlcStore_mk2/: Cargo.toml  README.md  lib.rs  ohlc_store_mk2.did  test_data.rs
src/ohlcStore_mk2/core/: constants.rs  runtime.rs  stable_memory.rs  types.rs  utils.rs  working_stats.rs
src/ohlcStore_mk2/store/: api.rs  btree.rs  constants.rs  directory.rs  mod.rs  price_data.rs  types.rs  utils.rs
src/ohlcStore_mk2/timers/: api.rs  constants.rs  mod.rs  timers.rs  utils.rs
src/price_alerts/: Cargo.toml  README.md  lib.rs  price_alerts.did  test_data.rs
src/price_alerts/core/: constants.rs  init_and_upgrade.rs  runtime.rs  stable_memory.rs  types.rs  working_stats.rs
src/price_alerts/price_alerts/: api.rs  btree.rs  fetch.rs  mod.rs
src/price_alerts/timers/: api.rs  timers.rs
src/super_indexer_v3/: Cargo.toml  README.md  lib.rs  super_indexer_v3.did  test_data.rs
src/super_indexer_v3/core/: Version.txt  api.rs  init_and_upgrade.rs  runtime.rs  stable_memory.rs  types.rs  working_stats.rs
src/super_indexer_v3/indexer/: account_tree.rs  api.rs  constants.rs  custom_types.rs  directory.rs  hash.rs  mod.rs  utils.rs
src/super_indexer_v3/indexer/fetch_data/: dfinity_icp.rs  dfinity_icp_types.rs  dfinity_icrc2.rs  dfinity_icrc2_types.rs  meme_icrc.rs  mod.rs  tx_store.rs
src/super_indexer_v3/indexer/process_data/: mod.rs  process_index.rs  small_tx.rs
src/super_indexer_v3/timers/: api.rs  timers.rs
src/super_stats_v3/: Cargo.toml  README.md  lib.rs  super_stats_v3.did  test_data.rs
src/super_stats_v3/core/: constants.rs  init_and_upgrade.rs  runtime.rs  stable_memory.rs  utils.rs
src/super_stats_v3/stats/: account_tree.rs  active_accounts.rs  api.rs  constants.rs  custom_types.rs  directory.rs  mod.rs  utils.rs
src/super_stats_v3/timers/: api.rs  mod.rs  timers.rs
src/tx_store_v3/: Cargo.toml  lib.rs  tx_store_v3.did
src/tx_store_v3/core/: constants.rs  init_and_upgrade.rs  runtime.rs  stable_memory.rs  utils.rs  working_stats.rs
src/tx_store_v3/store/: api.rs  custom_types.rs  mod.rs  tx_store.rs
(+133 files in other folders)
