
[workspace]
resolver = "2"
members = [
    "src/auth_backend",
    "src/super_indexer_v3",
    "src/super_stats_v3",
    "src/tx_store_v3",
    "src/ohlcStore_mk2",
    "src/cycles_manager",
    "src/price_alerts",
    "src/ocBot_mk2",
    "src/defiOracle_mk2/oracle_cpc_mk2",
    "src/defiOracle_mk2/oracle_mib_mk2",
    "src/defiOracle_mk2/oracle_shared_mk2",
    "src/canister_factory"
]

exclude = ["node_modules/magiccrypt"]
