[package]
name = "tx_store_v3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.12.0"
ic-cdk-macros = "0.8.2"
candid = "0.10.0"
serde = "1.0.159"
ic-stable-memory = "0.4.4"
ciborium = "0.2.1"
serde_bytes = "0.11.2"