[package]
name = "defi_oracle_mib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.12.0"
ic-cdk-macros = "0.8.1"
candid = "0.10.1"
serde = "1.0.159"
ic-cdk-timers = "0.6.0"
ciborium = "0.2.1"
ic-stable-structures = "0.6.0"
# for cast nat to u64
num-traits = "0.2.7"
# for futures
futures = "0.3.28"
# for xdr fetch
serde_bytes="0.11.12"
defi_oracle_shared = { path = "../defi_oracle_shared" }